# autobro_llm

./: .gitignore  .ignore  .pre-commit-config.yaml  CODE_QUALITY.md  README.md  app.py  document_processor.py  llm_tools.py  main.py  pyproject.toml  rag_engine.py  requirements.txt  ruff.toml
.github/workflows/: code-quality.yml
autobro/src/: app.py
chroma_db/: chroma.sqlite3
